refactor: repos and services with better exceptions and optional handling