@@ -3,54 +3,101 @@ package com.sro.SpringCoreTask1.service.impl;
 import com.sro.SpringCoreTask1.dto.request.TrainingTypeRequestDTO;
 import com.sro.SpringCoreTask1.dto.response.TrainingTypeResponseDTO;
 import com.sro.SpringCoreTask1.entity.TrainingType;
+import com.sro.SpringCoreTask1.exception.DatabaseOperationException;
+import com.sro.SpringCoreTask1.exception.ResourceNotFoundException;
+import com.sro.SpringCoreTask1.exception.ResourceAlreadyExistsException;
 import com.sro.SpringCoreTask1.mappers.TrainingTypeMapper;
 import com.sro.SpringCoreTask1.repository.TrainingTypeRepository;
 import com.sro.SpringCoreTask1.service.TrainingTypeService;
+
+import jakarta.validation.ConstraintViolationException;
+
 import org.springframework.stereotype.Service;
+
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class TrainingTypeServiceImpl implements TrainingTypeService {
-    
+
     private final TrainingTypeRepository trainingTypeRepository;
     private final TrainingTypeMapper trainingTypeMapper;
-    
+
     public TrainingTypeServiceImpl(TrainingTypeRepository trainingTypeRepository, TrainingTypeMapper trainingTypeMapper) {
         this.trainingTypeRepository = trainingTypeRepository;
         this.trainingTypeMapper = trainingTypeMapper;
     }
-    
+
     @Override
-    public TrainingTypeResponseDTO save(TrainingTypeRequestDTO dto) {
-        TrainingType trainingType = trainingTypeMapper.toEntity(dto);
-        TrainingType savedEntity = trainingTypeRepository.save(trainingType);
-        return trainingTypeMapper.toDTO(savedEntity);
+    public TrainingTypeResponseDTO save(TrainingTypeRequestDTO trainingTypeRequestDTO) {
+        if (trainingTypeRequestDTO == null) {
+            throw new IllegalArgumentException("TrainingTypeRequestDTO cannot be null");
+        }
+
+        try {
+            TrainingType trainingType = trainingTypeMapper.toEntity(trainingTypeRequestDTO);
+            TrainingType savedTrainingType = trainingTypeRepository.save(trainingType);
+            return trainingTypeMapper.toDTO(savedTrainingType);
+        } catch (ConstraintViolationException e) {
+            throw new ResourceAlreadyExistsException("Training Type with name " + trainingTypeRequestDTO.trainingTypeName() + " already exists");
+        } catch (Exception e) {
+            throw new DatabaseOperationException("Error saving Training Type", e);
+        }
     }
-    
+
     @Override
-    public Optional<TrainingTypeResponseDTO> findById(Long id) {
-        return trainingTypeRepository.findById(id)
-                .map(trainingTypeMapper::toDTO);
+    public TrainingTypeResponseDTO findById(Long id) {
+        if (id == null) {
+            throw new IllegalArgumentException("Training Type id cannot be null");
+        }
+
+        try {
+            return trainingTypeRepository.findById(id)
+                    .map(trainingTypeMapper::toDTO)
+                    .orElseThrow(() -> new ResourceNotFoundException("Training Type not found with id: " + id));
+        } catch (Exception e) {
+            throw new DatabaseOperationException("Error finding Training Type by id", e);
+        }
     }
-    
+
     @Override
     public List<TrainingTypeResponseDTO> findAll() {
-        return trainingTypeRepository.findAll().stream()
-                .map(trainingTypeMapper::toDTO)
-                .collect(Collectors.toList());
+        try {
+            return trainingTypeRepository.findAll().stream()
+                    .map(trainingTypeMapper::toDTO)
+                    .toList();
+        } catch (Exception e) {
+            throw new DatabaseOperationException("Error finding all Training Types", e);
+        }
     }
-    
+
+    @Override
+    public TrainingTypeResponseDTO update(TrainingTypeRequestDTO trainingTypeRequestDTO) {
+        if (trainingTypeRequestDTO == null) {
+            throw new IllegalArgumentException("TrainingTypeRequestDTO cannot be null");
+        }
+
+        try {
+            TrainingType trainingType = trainingTypeMapper.toEntity(trainingTypeRequestDTO);
+            return trainingTypeRepository.update(trainingType)
+                    .map(trainingTypeMapper::toDTO)
+                    .orElseThrow(() -> new ResourceNotFoundException("Training Type not found with id: " + trainingType.getId()));
+        } catch (Exception e) {
+            throw new DatabaseOperationException("Error updating Training Type", e);
+        }
+    }
+
     @Override
     public void deleteById(Long id) {
-        trainingTypeRepository.deleteById(id);
-    }
-    
-    @Override
-    public TrainingTypeResponseDTO update(TrainingTypeRequestDTO dto) {
-        TrainingType trainingType = trainingTypeMapper.toEntity(dto);
-        TrainingType updatedEntity = trainingTypeRepository.update(trainingType);
-        return trainingTypeMapper.toDTO(updatedEntity);
+        if (id == null) {
+            throw new IllegalArgumentException("Training Type id cannot be null");
+        }
+
+        try {
+            if (!trainingTypeRepository.deleteById(id)) {
+                throw new ResourceNotFoundException("Training Type not found with id: " + id);
+            }
+        } catch (Exception e) {
+            throw new DatabaseOperationException("Error deleting Training Type by id", e);
+        }
     }
 }
